# yocto-example

./: CMakeLists.txt  main.cpp
